style.css
@font-face{
    font-family: cinzel;
    src: url(./resource/Cinzel-Regular.otf)
}

@keyframes glowing {
  0% { box-shadow: 0 0 -2px #950D4B; }
  40% { box-shadow: 0 0 15px #C7407D; }
  60% { box-shadow: 0 0 25px #950D4B; }
  100% { box-shadow: 0 0 -10px #C7407D; }
}

body {
    background-color: #101B26;
    background: url("resource/twinkle-light.gif");
    color: white;
    font-family: sans-serif;
    text-align: center;
}
h1{
    font-size: 7vw;
    font-family: cinzel;
}
h2{
    font-size: 2.5vw;
    padding: 17px;
    background-color: black;
    display: inline-block;
    border-style: solid;
    border-color: white;
    border-radius: 2px;
}

select {
    background-color: black;
    color: white;
    border-radius: 5px;
    padding: 10px;
}

label{
    margin: 5px;
}

.submit{
    padding: 10px;
    border-color: white;
    border-width: thin;
    background-color: transparent;
    color: white;
    border-radius: 5px;
}

.submit:hover{
    animation: glowing 4000ms infinite;
}

.result{
	display: none;
}

#result_title {
  font-size: 3.5vw;
	margin: 20px;
	margin-top: 30px;
}

#info {
	width: 85%;
	margin: auto;
}

#information{
	text-align: left;
	position: relative;
	top: -40vh;
	float: right;
	font-size: 1.5vw;
  width: 60%;
}

#constellation{
	width: 50%;
}

body {
    font-family: "bookman old style";
}
:target {
    color: lightyellow;
    background: indianred;
}

